# Leto

./: .gitignore  CMakeLists.txt  Readme.md  build.bat  main.cpp
cmake/: FindSQLite3.cmake
include/: Leto.h  leto.h
include/sensors/: sensor.h  temperature_sensor.h
include/spotify/: Auth.h  AuthImpl.h  auth.h  auth_impl.h
include/storage/: PairDB.h  pair_storage.h
include/temperature/: temperature.h
include/utility/: WebBrowser.h  curl_escape.h  url.h  url_escape.h
libs/: json.cmake  web_server.cmake
libs/curl/: CMakeLists.txt
src/: leto.cpp
src/core/: Leto.cpp  leto.cpp
src/core/spotify/: AuthImpl.cpp  AuthUrl.cpp  AuthUrl.h  auth_callback_server.cpp  auth_callback_server.h  auth_impl.cpp  auth_impl.h  auth_url.cpp  auth_url.h
src/core/spotify/config/: Config.cpp  config.h
src/core/storage/: MemoryPairDB.cpp  MemoryPairDB.h  memory_storage.cpp  memory_storage.h
src/core/utility/: CurlEscape.cpp  CurlEscape.h  curl_escape.cpp  curl_url.cpp  curl_url.h
src/main/: main.cpp
src/main/utility/: NetSurf.cpp  NetSurf.h  Opera.cpp  Opera.h  netsurf.cpp  netsurf.h  opera.cpp  opera.h
src/main_win/: Main.cpp  main.cpp
src/main_win/utility/: DefaultBrowser.cpp  DefaultBrowser.h  browser_default.cpp  browser_default.h
test/: CMakeLists.txt  LetoTest.cpp  leto_test.cpp
test/libs/curl/: CurlTest.cpp  curl.cpp  edge.cpp
test/libs/json/: JsonTest.cpp
test/libs/sqlite/: sqlite_test.cpp
test/libs/web_server/: web_server.cpp
test/mock/: MockWebBrowser.cpp  MockWebBrowser.h  mock_web_browser.cpp  mock_web_browser.h
test/spotify/: AuthImplTest.cpp  auth_impl.cpp
test/spotify/utility/: CurlEscapeTest.cpp  curl_escape_test.cpp  curl_url.cpp
test/storage/: MemoryStorageTest.cpp  memory_storage_test.cpp
